# sec-daily-dingtalk-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: doonsec-dingtalk.yml
data/: sent_state.json
scripts/: run_doonsec_push.sh
src/doonsec_push/: __init__.py  __main__.py  classifier.py  config.py  dingtalk.py  models.py  rss.py  service.py  state.py
tests/: test_classifier.py  test_rss.py  test_service.py
